# hardware_reservoir_computing

./: README.md  pyproject.toml  test.py
.github/workflows/: release.yml
docs/.github/workflows/: docs.yml
docs/source/: conf.py
docs/source/api/: modules.rst
hardware_rc_project/: LICENSE  pyproject.toml
hardware_rc_project/docs/source/: conf.py  index.rst
hardware_rc_project/src/hardware_rc/: dqn_rc.py  reservoir.py
src/hardware_rc/: __init__.py  dqn_rc.py  reservoir.py
