[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hardware_rc"
version = "0.2.2"
authors = [
  { name="Andrew Carr", email="andrewcarr319@gmail.com" },
]
description = "Tools for simulating and training a hardware reservoir computer"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "jax",
  "gymnasium",
  "matplotlib",
]

[project.urls]
"Homepage" = "https://github.com"

[tool.hatch.build.targets.wheel]
packages = ["src/hardware_rc"]

[project.optional-dependencies]
docs = [
  "sphinx>=8,<9",
  "furo",
  "sphinx-rtd-theme",
  "sphinx-autodoc-typehints",
  "myst-parser",
  "sphinx-copybutton",
  
]

viz = [
  "pillow",
  "ipython",
]

train = [
  "wandb",
  "ray[tune]",
  "pandas",
]