[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hardware_rc"
version = "0.1.0"
authors = [
  { name="Andrew Carr", email="andrewcarr319@gmail.com" },
]
description = "Tools for simulating and training a hardware reservoir computer"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com"

[tool.hatch.build.targets.wheel]
packages = ["src/hardware_rc"]